--- a/src/components/pages/skillsPage/_skills.scss
+++ b/src/components/pages/skillsPage/_skills.scss
@@ -1,10 +1,10 @@
 @use "../../../../public/variables" as v;
-@use "../homePage/components/skillsBanner/skillsBanner" as skillsBanner;
 $namespace: "skills-pg";
-.#{$namespace}-container {
-  padding-bottom: v.$navbar-height;
-  display: flex;
-  align-items: center;
-  min-height: 100vh;
-  box-sizing: border-box;
+@mixin skills-pg() {
+  .#{$namespace}-container {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    box-sizing: border-box;
+  }
 }
